fix issues around quick fixes
- reference to ancestor without ID caused null, now it sets the id
- reference to ancestor fix always just pointed at parent, not where config was defined
- count of errors was sometimes not reset so was too high
- alignment of error line marker was wrong

--- a/ui-modules/blueprint-composer/app/views/main/graphical/graphical.state.less
+++ b/ui-modules/blueprint-composer/app/views/main/graphical/graphical.state.less
@@ -137,6 +137,7 @@
     }
     .error-line-text {
       flex: 1 1 auto;
+      margin-top: 4px;   // match marker
     }
     .error-line-marker {
       color: @brand-danger;
